# imgbatch-gen

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  extract_models.py  gemini生图.openapi.json  github-actions-deploy  github-actions-deploy.pub  models_endpoints.json  pricing_new.json  pyproject.toml  requirements.txt  set_minio_public.py  test_results.json  uv.toml
.github/workflows/: ci.yml  deploy.yml
.understand-anything/: knowledge-graph.json  meta.json
docs/: 修复与功能记录.md
examples/: chat_with_context.py
migrations/: add_user_id_to_async_tasks.py
scripts/: migrate_case_images_to_minio.py
sql/: 00-init-schema.sql
sql/public/: accounts.sql  announcements.sql  billing_plans.sql  cases.sql  chat_messages.sql  cleanup_history.sql  consumption_records.sql  conversation_sessions.sql  download_records.sql  image_generation_records.sql  login_logs.sql  payment_orders.sql  payment_refunds.sql  stored_credentials.sql  system_configs.sql  system_logs.sql  transactions.sql  uploaded_files.sql  user_auth.sql  user_notifications.sql  user_requests.sql  users.sql  withdrawals.sql
src/: __init__.py  __main__.py
src/api/: __init__.py  auth.py  main.py  middleware.py
src/config/: __init__.py  aspect_ratios.py  (+5 more)
tests/: test_account_billing.py  test_account_billing_config_api.py  test_assistant_chat_retry.py  test_generate_history_prompt_extraction.py  test_generation_retry_behavior.py  test_history_timestamp_serialization.py  test_payment_subscription_order_api.py
web/: .env.development  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
(+218 files in other folders)
